[gd_scene load_steps=5 format=3 uid="uid://buu81tf382ryq"]

[ext_resource type="Script" path="res://Assets/PuzzlesElement/PuzzleBloc/puzzle_bloc.gd" id="1_xb83a"]
[ext_resource type="Texture2D" uid="uid://cyuy2d0codqhm" path="res://fleches.png" id="3_45e0e"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_qnpws"]
load_path = "res://.godot/imported/coeur.png-5d1070f41f8e4b084814e8a86f85310c.ctex"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_imt6f"]
size = Vector2(41, 42)

[node name="PuzzleBloc" type="Node2D"]
script = ExtResource("1_xb83a")

[node name="Faces" type="Node2D" parent="."]

[node name="Face1" type="ColorRect" parent="Faces"]
visible = false
z_index = 2
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="Sprite" type="Sprite2D" parent="Faces/Face1"]
position = Vector2(20, 19)
texture = SubResource("CompressedTexture2D_qnpws")

[node name="Label" type="Label" parent="Faces/Face1"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10

[node name="Face2" type="ColorRect" parent="Faces"]
visible = false
z_index = 1
offset_right = 40.0
offset_bottom = 40.0

[node name="Fleche" type="Sprite2D" parent="Faces/Face2"]
z_index = -5
position = Vector2(19, 5)
rotation = -1.5708
texture = ExtResource("3_45e0e")

[node name="Sprite" type="Sprite2D" parent="Faces/Face2"]
position = Vector2(20, 19)
texture = SubResource("CompressedTexture2D_qnpws")

[node name="Label" type="Label" parent="Faces/Face2"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10

[node name="Face3" type="ColorRect" parent="Faces"]
visible = false
z_index = 1
offset_right = 40.0
offset_bottom = 40.0

[node name="Sprite" type="Sprite2D" parent="Faces/Face3"]
position = Vector2(20, 19)
texture = SubResource("CompressedTexture2D_qnpws")

[node name="Fleche" type="Sprite2D" parent="Faces/Face3"]
z_index = -5
position = Vector2(20, 38)
rotation = 1.5708
texture = ExtResource("3_45e0e")

[node name="Label" type="Label" parent="Faces/Face3"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10

[node name="Face4" type="ColorRect" parent="Faces"]
visible = false
z_index = 1
offset_right = 40.0
offset_bottom = 40.0

[node name="Sprite" type="Sprite2D" parent="Faces/Face4"]
position = Vector2(19, 20)
texture = SubResource("CompressedTexture2D_qnpws")

[node name="Fleche" type="Sprite2D" parent="Faces/Face4"]
z_index = -5
position = Vector2(2, 20)
rotation = 3.14159
texture = ExtResource("3_45e0e")

[node name="Label" type="Label" parent="Faces/Face4"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10

[node name="Face5" type="ColorRect" parent="Faces"]
z_index = 1
offset_right = 40.0
offset_bottom = 40.0

[node name="Fleche" type="Sprite2D" parent="Faces/Face5"]
z_index = -5
position = Vector2(38, 20)
texture = ExtResource("3_45e0e")

[node name="Sprite" type="Sprite2D" parent="Faces/Face5"]
position = Vector2(20, 20)
texture = SubResource("CompressedTexture2D_qnpws")

[node name="Label" type="Label" parent="Faces/Face5"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "toto"

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(19, 20)
shape = SubResource("RectangleShape2D_imt6f")

[node name="EmitterSuccess" type="CPUParticles2D" parent="."]
position = Vector2(19, 0)
emitting = false
amount = 20
one_shot = true
explosiveness = 0.5
emission_shape = 3
emission_rect_extents = Vector2(10, 1)
direction = Vector2(0, -1)
initial_velocity_min = 350.0
initial_velocity_max = 400.0
color = Color(0, 0.988235, 0.498039, 1)
hue_variation_min = 0.19
hue_variation_max = 0.98

[node name="EmitterFailure" type="CPUParticles2D" parent="."]
position = Vector2(19, 18)
emitting = false
amount = 40
one_shot = true
explosiveness = 0.8
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 150.0
color = Color(1, 0, 0, 1)

[connection signal="area_shape_entered" from="Hitbox" to="." method="_on_hitbox_area_shape_entered"]
[connection signal="input_event" from="Hitbox" to="." method="_on_hitbox_input_event"]
[connection signal="mouse_entered" from="Hitbox" to="." method="_on_hitbox_mouse_entered"]
[connection signal="mouse_exited" from="Hitbox" to="." method="_on_hitbox_mouse_exited"]
[connection signal="finished" from="EmitterSuccess" to="." method="_on_emitter_finished"]
[connection signal="finished" from="EmitterFailure" to="." method="_on_emitter_finished"]
